# daemond

./: INSTALL  Makefile.in  README.md
daemond/: COPYING  INSTALL  Makefile.in  configure.ac
daemond/doc/: README
daemond/doc/sample/daemond.d/: X11  apache  boot  crond  filesystems  getty  lpd  network  pacct  random  time
daemond/src/: Makefile.in  config.h.in  daemond.cc  exec.cc  main.cc  node.cc  parser.cc  rcfiles.H  rcfiles.cc  rcgr.y  rclex.l  service.H  service.cc  state.H  status.H  status.cc  status_file.cc  status_vc.cc
doc/sample/: daemond.rc
doc/sample/daemond.d/: _boot-clean  acpid  hostname  if-eth0  if-lo  isapnp  lvm  modes  nfsd  rpc  samba  sshd  syslog
src/: Makefile.in  exec.H  exec.cc  keywords.H  log.H  log.cc  main.cc  node.H  parser.H  service.H  service.cc
